--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
+                <i class="fa-regular fa-star"></i>
               </div>
               <div class="book__price">
                 <span class="book__price--normal">$24.99</span> $17.95
@@ -158,8 +158,8 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
+                <i class="fa-regular fa-star"></i>
               </div>
               <div class="book__price">
                 <span class="book__price--normal">$42.99</span> $21.99
@@ -176,8 +176,8 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
               </div>
               <div class="book__price">
                 <span class="book__price--normal">$27.95</span> $12.95
@@ -204,9 +204,9 @@
               <div class="book__rating">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
               </div>
               <div class="book__price">
                 <span class="book__price--normal">$39.95</span> $11.95
@@ -241,8 +241,8 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
+                <i class="fa-regular fa-star"></i>
               </div>
               <div class="book__price">
                 <span class="book__price--normal">$34.95</span> $23.95
@@ -260,7 +260,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
+                <i class="fa-regular fa-star"></i>
               </div>
               <div class="book__price">
                 <span class="book__price--normal">$27.99</span> $14.99
@@ -278,7 +278,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
+                <i class="fa-regular fa-star"></i>
               </div>
               <div class="book__price">
                 <span class="book__price--normal">$45.95</span> $32.95
@@ -295,8 +295,8 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
+                <i class="fa-regular fa-star"></i>
               </div>
               <div class="book__price">
                 <span class="book__price--normal">$39.49</span> $21.99
@@ -314,7 +314,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
+                <i class="fa-regular fa-star"></i>
               </div>
               <div class="book__price">
                 <span class="book__price--normal">$37.99</span> $28.95
